build: Update homepage url

--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -3,7 +3,11 @@
         <div class="filters">
             <div class="filter-area search-box">
                 <label class="label" for="input">Search</label>
-                <input type="text" class="filter-input filter-item" id="input">
+                <input
+                    type="text"
+                    class="filter-input filter-item"
+                    id="input"
+                />
             </div>
             <div class="filter-area time-box">
                 <label class="label" for="select-time">Time</label>
@@ -14,8 +18,13 @@
                 <select class="area filter-item" id="select-area"></select>
             </div>
             <div class="filter-area ingrediends-box">
-                <label class="label" for="select-ingredients">Ingredients</label>
-                <select class="ingrediends filter-item" id="select-ingredients"></select>
+                <label class="label" for="select-ingredients"
+                    >Ingredients</label
+                >
+                <select
+                    class="ingrediends filter-item"
+                    id="select-ingredients"
+                ></select>
             </div>
         </div>
     </div>
@@ -23,3 +32,4 @@
     <div class="cards">
         <ul class="list-item"></ul>
     </div>
+</div>
