--- a/src/favorites.html
+++ b/src/favorites.html
@@ -21,7 +21,6 @@
                 <svg class="favorites-icon">
                     <use href="./img/sprite.svg#fav-icon"></use>
                 </svg>
-
             </div>
         </section>
         <section class="tags">
@@ -52,23 +51,44 @@
                 </div>
             </div>
             <p class="favorites-text">
-                It appears that you haven't added any recipes to your favorites yet.
-                To get started, you can add recipes that you like to your favorites
-                for easier access in the future.
+                It appears that you haven't added any recipes to your favorites
+                yet. To get started, you can add recipes that you like to your
+                favorites for easier access in the future.
             </p>
-        </div>
-        <ul class="page-change-favourite-list">
-            <li class="page-change-favourite"> <button class="btn-page-change dark-btn-favourites"></button></li>
-            <li class="page-change-favourite"> <button class="btn-page-change dark-btn-favourites"></button></li>
-<div class="btn-num-favourites">
-            <li class="page-change-favourite"> <button class="btn-page-change">1</button></li>
-            <li class="page-change-favourite"> <button class="btn-page-change">2</button></li>
-            <li class="page-change-favourite"> <button class="btn-page-change">...</button></li>
-</div>
-            <li class="page-change-favourite"> <button class="btn-page-change green-btn-favourites"></button></li>
-            <li class="page-change-favourite"> <button class="btn-page-change green-btn-favourites"></button></li>
-        </ul>
-    </section>
-    <script type="module" src="./favorites.js"></script>
-</body>
+            <ul class="page-change-favourite-list">
+                <li class="page-change-favourite">
+                    <button
+                        class="btn-page-change dark-btn-favourites"
+                    ></button>
+                </li>
+                <li class="page-change-favourite">
+                    <button
+                        class="btn-page-change dark-btn-favourites"
+                    ></button>
+                </li>
+                <div class="btn-num-favourites">
+                    <li class="page-change-favourite">
+                        <button class="btn-page-change">1</button>
+                    </li>
+                    <li class="page-change-favourite">
+                        <button class="btn-page-change">2</button>
+                    </li>
+                    <li class="page-change-favourite">
+                        <button class="btn-page-change">...</button>
+                    </li>
+                </div>
+                <li class="page-change-favourite">
+                    <button
+                        class="btn-page-change green-btn-favourites"
+                    ></button>
+                </li>
+                <li class="page-change-favourite">
+                    <button
+                        class="btn-page-change green-btn-favourites"
+                    ></button>
+                </li>
+            </ul>
+        </section>
+        <script type="module" src="./favorites.js"></script>
+    </body>
 </html>
