--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <base href="/" />
+        <link rel="stylesheet" href="styles/index.css" />
         <link rel="stylesheet" href="../src/styles/favor-body.css" />
         <title>Document</title>
     </head>
@@ -89,6 +90,7 @@
                 </li>
             </ul>
         </section>
+        <script type="module" src="./js/header.js" defer></script>
         <script type="module" src="./favorites.js"></script>
     </body>
 </html>
