--- a/src/html/header.html
+++ b/src/html/header.html
@@ -10,8 +10,8 @@
           <a class="header-logo-link" href="index.html"><span class="header-span">tasty</span>treats.</a>
         </div>
         <div class="header-buttons">
-                    <a
-          href="tel:+380730000000"
+            <a
+            href="tel:+380730000000"
             target="_blank"
             class="header-cart-btn"
           >
@@ -19,6 +19,10 @@
               <use href="./img/sprite.svg#icon-shopping-cart"></use>
             </svg>
           </a>
+        <label class="header-switch">
+            <input type="checkbox" class="header-input">
+            <span class="header-slider round"></span>
+        </label>  
         </div>
       </div>
       <!--______________ MOBILE ______________-->
