Adding modal close logic
Adding modal close logic

--- a/src/html/modal-order-now.html
+++ b/src/html/modal-order-now.html
@@ -1,6 +1,10 @@
-<div class="backdrop is-hidden" data-modal-order>
+<div class="backdrop order-backdrop is-hidden" data-modal-order>
     <div class="modal-order">
-        <button type="button" class="modal-close-btn" data-modal-order-close>
+        <button
+            type="button"
+            class="modal-close-btn"
+            data-action="close-order-modal"
+        >
             <svg class="icon-close" width="20" height="20">
                 <use
                     href="/src/img/modal-recipe/modal-recipe.svg#icon-close"
