--- a/src/html/modal-recipe.html
+++ b/src/html/modal-recipe.html
@@ -1,9 +1,9 @@
-<div class="backdrop is-hidden" data-modal-recipe>
-    <div class="modal-recipe">
+<div class="backdrop recipe-backdrop is-hidden" data-modal-recipe>
+    <div class="modal-recipe" id="modal-recipe">
         <button
             type="button"
             class="modal-close-btn-recipe"
-            data-modal-recipe-close
+            data-action="close-modal"
         >
             <svg class="icon-close-recipe" width="20" height="20">
                 <use
