--- a/src/html/modal-give-rating.html
+++ b/src/html/modal-give-rating.html
@@ -1,6 +1,10 @@
-<div class="backdrop is-hidden" data-modal-rating>
+<!-- <div class="backdrop rating-backdrop is-hidden" data-modal-rating>
     <div class="modal-rating">
-        <button type="button" class="rating-close-btn" data-modal-rating-close>
+        <button
+            type="button"
+            class="rating-close-btn"
+            data-action="close-rating-modal"
+        >
             <svg class="icon-close" width="20" height="20">
                 <use
                     href="/src/img/modal-recipe/modal-recipe.svg#icon-close"
@@ -27,4 +31,4 @@
             <button type="submit" class="modal-rating-btn">Send</button>
         </form>
     </div>
-</div>
+</div> -->
