sched: Update codestyle

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,54 +1,53 @@
-   <header class="header">
-      <div class="container header-container">
+<header class="header">
+    <div class="container header-container">
         <nav class="header-nav-container">
-          <div class="header-nav">
-            <a class="header-nav-link" href="index.html">Home</a>
-            <a class="header-nav-link" href="favorites.html">Favorites</a>
-          </div>
+            <div class="header-nav">
+                <a class="header-nav-link" href="index.html">Home</a>
+                <a class="header-nav-link" href="favorites.html">Favorites</a>
+            </div>
         </nav>
-          <div class="header-logo">
-          <a class="header-logo-link" href="index.html"><span class="header-span">tasty</span>treats.</a>
+        <div class="header-logo">
+            <a class="header-logo-link" href="index.html"
+                ><span class="header-span">tasty</span>treats.</a
+            >
         </div>
         <div class="header-buttons">
-            <a
-            href="tel:+380730000000"
-            target="_blank"
-            class="header-cart-btn"
-          >
-            <svg class="header-cart">
-              <use href="./img/sprite.svg#icon-shopping-cart"></use>
-            </svg>
-          </a>
-        <label class="header-switch">
-            <input type="checkbox" class="header-input">
-            <span class="header-slider round"></span>
-        </label>  
+            <a href="tel:+380730000000" target="_blank" class="header-cart-btn">
+                <svg class="header-cart">
+                    <use href="./img/sprite.svg#icon-shopping-cart"></use>
+                </svg>
+            </a>
+            <label class="header-switch">
+                <input type="checkbox" class="header-input" />
+                <span class="header-slider round"></span>
+            </label>
         </div>
-      </div>
-      <!--______________ MOBILE ______________-->
-      <nav class="mob-container container">
-          <div class="header-logo">
-          <a class="header-logo-link" href="index.html"><span class="header-span">tasty</span>treats.</a>
+    </div>
+    <!--______________ MOBILE ______________-->
+    <nav class="mob-container container">
+        <div class="header-logo">
+            <a class="header-logo-link" href="index.html"
+                ><span class="header-span">tasty</span>treats.</a
+            >
         </div>
         <div class="header-buttons">
-                    <a
-          href="tel:+380730000000"
-            target="_blank"
-            class="header-cart-btn"
-          >
-            <svg class="header-cart">
-              <use href="./img/sprite.svg#icon-shopping-cart"></use>
-            </svg>
-          </a>
-            <button class="header-burger-btn"
-            type="button"
-            data-header-menu-open>
-            <svg class="header-burger">
-                <use href="/src/img/sprite.svg#icon-hamburger"></use>
-            </svg>
+            <a href="tel:+380730000000" target="_blank" class="header-cart-btn">
+                <svg class="header-cart">
+                    <use href="./img/sprite.svg#icon-shopping-cart"></use>
+                </svg>
+            </a>
+            <button
+                class="header-burger-btn"
+                type="button"
+                data-header-menu-open
+            >
+                <svg class="header-burger">
+                    <use href="/src/img/sprite.svg#icon-hamburger"></use>
+                </svg>
             </button>
-      </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 <!-- HEADER FOR MOBILE -->
 <!-- <header class="header" id="header-section">
     <div class="block-for-mobile container">
