--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -3,11 +3,7 @@
         <div class="filters">
             <div class="filter-area search-box">
                 <label class="label" for="input">Search</label>
-                <input
-                    type="text"
-                    class="filter-input filter-item"
-                    id="input"
-                />
+                <input type="text" class="filter-input filter-item" id="input" />
             </div>
             <div class="filter-area time-box">
                 <label class="label" for="select-time">Time</label>
@@ -18,20 +14,14 @@
                 <select class="area filter-item" id="select-area"></select>
             </div>
             <div class="filter-area ingrediends-box">
-                <label class="label" for="select-ingredients"
-                    >Ingredients</label
-                >
-                <select
-                    class="ingrediends filter-item"
-                    id="select-ingredients"
-                ></select>
+                <label class="label" for="select-ingredients">Ingredients</label>
+                <select class="ingrediends filter-item" id="select-ingredients"></select>
             </div>
         </div>
     </div>
-    <div class="reset-filters"></div>
+    <btn class="reset-filters">X Reset the filter</btn>
     <div class="cards">
         <ul class="list-item"></ul>
     </div>
     <div class="pagination"></div>
 </div>
->
