header/dark/light

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,12 +3,12 @@
         <nav class="header-nav-container">
             <div class="header-nav">
                 <a class="header-nav-link" href="index.html">Home</a>
-                <a class="header-nav-link" href="favorites.html">Favorites</a>
+                <a class="header-nav-link treats" href="favorites.html">Favorites</a>
             </div>
         </nav>
         <div class="header-logo">
             <a class="header-logo-link" href="index.html"
-                ><span class="header-span">tasty</span>treats.</a
+                ><span class="header-span">tasty</span><span class="treats">treats.</span></a
             >
         </div>
         <div class="header-buttons">
@@ -18,8 +18,8 @@
                 </svg>
             </a>
             <label class="header-switch">
-                <input type="checkbox" class="header-input" />
-                <span class="header-slider round"></span>
+                <input id="theme" type="checkbox" class="header-input" />
+                <span id="theme-toggle" class="header-slider round"></span>
             </label>
         </div>
     </div>
