populars: mob/tab css

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <include src="./html/header.html"></include>
         <main>
             <include src="./html/hero.html"></include>
-            <div class="main-div">
+            <div class="main-div container">
                 <section id="side-bar">
                     <include src="./html/categories.html"></include>
                     <include src="./html/popular.html"></include>
