--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -3,7 +3,7 @@
         <div class="filters">
             <div class="filter-area search-box">
                 <label class="label" for="input">Search</label>
-                <input type="text" class="filter-input filter-item" id="input" />
+                <input type="text" placeholder="Enter Text" class="filter-input filter-item" id="input" />
             </div>
             <div class="filter-area time-box">
                 <label class="label" for="select-time">Time</label>
@@ -18,8 +18,8 @@
                 <select class="ingrediends filter-item" id="select-ingredients"></select>
             </div>
         </div>
-    </div>
-    <btn class="reset-filters">X Reset the filter</btn>
+        <button class="reset-filters" type="button">Reset the filter</button>   
+    </div> 
     <div class="cards">
         <ul class="list-item"></ul>
     </div>
