--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -3,7 +3,12 @@
         <div class="filters">
             <div class="filter-area search-box">
                 <label class="label" for="input">Search</label>
-                <input type="text" placeholder="Enter Text" class="filter-input filter-item" id="input" />
+                <input
+                    type="text"
+                    placeholder="Enter Text"
+                    class="filter-input filter-item"
+                    id="input"
+                />
             </div>
             <div class="filter-area time-box">
                 <label class="label" for="select-time">Time</label>
@@ -14,12 +19,17 @@
                 <select class="area filter-item" id="select-area"></select>
             </div>
             <div class="filter-area ingrediends-box">
-                <label class="label" for="select-ingredients">Ingredients</label>
-                <select class="ingrediends filter-item" id="select-ingredients"></select>
+                <label class="label" for="select-ingredients"
+                    >Ingredients</label
+                >
+                <select
+                    class="ingrediends filter-item"
+                    id="select-ingredients"
+                ></select>
             </div>
         </div>
-        <button class="reset-filters" type="button">Reset the filter</button>   
-    </div> 
+        <button class="reset-filters" type="button">Reset the filter</button>
+    </div>
     <div class="cards">
         <ul class="list-item"></ul>
     </div>
