reset-filter button done

--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -1,6 +1,7 @@
 <div id="content-data">
     <div id="content-filters">
         <div class="filters">
+            <form action="?" class="form-filters">
             <div class="filter-area search-box">
                 <label class="label" for="input">Search</label>
                 <input type="text" placeholder="Enter Text" class="filter-input filter-item" id="input" />
@@ -17,6 +18,7 @@
                 <label class="label" for="select-ingredients">Ingredients</label>
                 <select class="ingrediends filter-item" id="select-ingredients"></select>
             </div>
+            </form>  
         </div>
         <button class="reset-filters" type="button">Reset the filter</button>
     </div>
