fix favorites categories

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -34,8 +34,8 @@
                     </button>
                 </li>
             </ul>
-            <div class="categories-box-favourites">
-                <ul class="category-list-favourites"></ul>
+            <div class="categories-box-favorites">
+                <ul class="category-list-favorites"></ul>
             </div>
         </div>
     </section>
