--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,9 +7,7 @@
             </div>
         </nav>
         <div class="header-logo">
-            <a class="header-logo-link" href="index.html"
-                ><span class="header-span">tasty</span><span>treats.</span></a
-            >
+            <a class="header-logo-link" href="index.html"><span class="header-span">tasty</span><span>treats.</span></a>
         </div>
         <div class="header-buttons">
             <a href="tel:+380730000000" target="_blank" class="header-cart-btn">
@@ -26,10 +24,8 @@
     <!--______________ MOBILE ______________-->
     <nav class="mob-container container">
         <div class="header-logo">
-            <a class="header-logo-link" href="index.html"
-                ><span class="header-span">tasty</span>
-                <span class="treats">treats.</span></a
-            >
+            <a class="header-logo-link" href="index.html"><span class="header-span">tasty</span>
+                <span class="treats">treats.</span></a>
         </div>
         <div class="header-buttons">
             <a href="tel:+380730000000" target="_blank" class="header-cart-btn">
@@ -37,11 +33,7 @@
                     <use href="./img/sprite.svg#icon-shopping-cart"></use>
                 </svg>
             </a>
-            <button
-                id="headerOpenModalBtn"
-                class="header-burger-btn"
-                type="button"
-            >
+            <button id="headerOpenModalBtn" class="header-burger-btn" type="button">
                 <svg class="header-burger">
                     <use href="./img/sprite.svg#icon-hamburger"></use>
                 </svg>
@@ -54,9 +46,7 @@
             <span class="header-close" id="headerCloseModalBtn">&times;</span>
             <nav class="header-mobile-nav">
                 <a class="header-mobile-link" href="index.html">Home</a>
-                <a class="header-mobile-link" href="favorites.html"
-                    >Favorites</a
-                >
+                <a class="header-mobile-link" href="favorites.html">Favorites</a>
             </nav>
             <label class="header-switch-mob">
                 <input type="checkbox" class="header-input-mob theme-toggle" />
@@ -398,3 +388,34 @@
 </div> -->
 
 <!-- END  OF  MOBILE  MENU  MODAL -->
+
+<div class="rating-recipe" id="rating-container">
+    <span class="rating-number-recipe">4.5</span>
+    <ul class="stars">
+        <li>
+            <svg class="star" data-rating="1" width="16" height="16">
+                <use href="/src/img/sprite.svg#icon-Star-1"></use>
+            </svg>
+        </li>
+        <li>
+            <svg class="star" data-rating="2" width="16" height="16">
+                <use href="/src/img/sprite.svg#icon-Star-1"></use>
+            </svg>
+        </li>
+        <li>
+            <svg class="star" data-rating="3" width="16" height="16">
+                <use href="/src/img/sprite.svg#icon-Star-1"></use>
+            </svg>
+        </li>
+        <li>
+            <svg class="star" data-rating="4" width="16" height="16">
+                <use href="/src/img/sprite.svg#icon-Star-1"></use>
+            </svg>
+        </li>
+        <li>
+            <svg class="star" data-rating="5" width="16" height="16">
+                <use href="/src/img/sprite.svg#icon-Star-1"></use>
+            </svg>
+        </li>
+    </ul>
+</div>
