slider, header fix

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -21,8 +21,8 @@
                 </svg>
             </a>
             <label class="header-switch">
-                <input id="theme" type="checkbox" class="header-input" />
-                <span id="theme-toggle" class="header-slider round"></span>
+                <input type="checkbox" class="header-input theme-toggle" />
+                <span class="header-slider round"></span>
             </label>
         </div>
     </div>
@@ -61,7 +61,7 @@
                 >
             </nav>
             <label class="header-switch-mob">
-                <input type="checkbox" class="header-input-mob" />
+                <input type="checkbox" class="header-input-mob theme-toggle" />
                 <span class="header-slider round"></span>
             </label>
         </div>
