main: Fix recipe not opening

--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -2,23 +2,33 @@
     <div id="content-filters">
         <div class="filters">
             <form action="?" class="form-filters">
-            <div class="filter-area search-box">
-                <label class="label" for="input">Search</label>
-                <input type="text" placeholder="Enter Text" class="filter-input filter-item" id="input" />
-            </div>
-            <div class="filter-area time-box">
-                <label class="label" for="select-time">Time</label>
-                <select class="time filter-item" id="select-time"></select>
-            </div>
-            <div class="filter-area area-box">
-                <label class="label" for="select-area">Area</label>
-                <select class="area filter-item" id="select-area"></select>
-            </div>
-            <div class="filter-area ingrediends-box">
-                <label class="label" for="select-ingredients">Ingredients</label>
-                <select class="ingrediends filter-item" id="select-ingredients"></select>
-            </div>
-            </form>  
+                <div class="filter-area search-box">
+                    <label class="label" for="input">Search</label>
+                    <input
+                        type="text"
+                        placeholder="Enter Text"
+                        class="filter-input filter-item"
+                        id="input"
+                    />
+                </div>
+                <div class="filter-area time-box">
+                    <label class="label" for="select-time">Time</label>
+                    <select class="time filter-item" id="select-time"></select>
+                </div>
+                <div class="filter-area area-box">
+                    <label class="label" for="select-area">Area</label>
+                    <select class="area filter-item" id="select-area"></select>
+                </div>
+                <div class="filter-area ingrediends-box">
+                    <label class="label" for="select-ingredients"
+                        >Ingredients</label
+                    >
+                    <select
+                        class="ingrediends filter-item"
+                        id="select-ingredients"
+                    ></select>
+                </div>
+            </form>
         </div>
         <button class="reset-filters" type="button">Reset the filter</button>
     </div>
