--- a/src/favorites.html
+++ b/src/favorites.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <base href="/" />
+<<        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="styles/index.css" />
         <link rel="stylesheet" href="styles/favor-body.css" />
         <title>Document</title>
@@ -25,7 +29,7 @@
             </div>
         </section>
         <section class="tags">
-            <div class="container tags-container">
+            <div class="container fav-container tags-container">
                 <ul class="favor-tags-list">
                     <li class="tags-item">
                         <button
@@ -42,16 +46,16 @@
             </div>
         </section>
         <section class="favorites-gallery">
-            <div class="container favorites-gallery-container">
+            <div class="container fav-container favorites-gallery-container">
                 <ul class="favorites-list"></ul>
             </div>
 
-            <div class="container">
+            <div class="container fav-container">
                 <div class="pagination-wrapper favor-pagination">
                     <div class="tui-pagination" id="pagination"></div>
                 </div>
             </div>
-            <p class="favorites-text">
+            <p class="container fav-container favorites-text">
                 It appears that you haven't added any recipes to your favorites
                 yet. To get started, you can add recipes that you like to your
                 favorites for easier access in the future.
