--- a/src/favorites.html
+++ b/src/favorites.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <base href="/" />
-<<        <link
+        <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
             rel="stylesheet"
         />
@@ -18,9 +18,9 @@
         <section id="header-section">
             <include src="./html/header.html"></include>
         </section>
-        <section id="hero-section">
-            <!-- <include src="./html/hero.html"></include> -->
-        </section>
+        <!-- <section id="hero-section">
+             <include src="./html/hero.html"></include> 
+        </section> -->
         <section class="favorites-zero">
             <div class="container">
                 <svg class="favorites-icon">
