changes for recipe modal
changes for recipe modal

--- a/src/html/modal-recipe.html
+++ b/src/html/modal-recipe.html
@@ -22,23 +22,25 @@
                         width="295"
                         height="295"
                     />
+                    <a
+                        class="youtube-link"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <svg
+                            class="icon-youtube"
+                            width="60"
+                            height="60"
+                            viewBox="0 0 60 60"
+                        >
+                            <polygon points="20,15 20,45 45,30" fill="#fff" />
+                        </svg>
+                    </a>
                 </div>
                 <h3 class="selected-recipe-name">RECIPE NAME</h3>
             </div>
             <div class="block2-wrap">
-                <ul class="tags-1 tags">
-                    <li class="tag-item">
-                        <button class="btn-tag" type="button">
-                            #Breakfast
-                        </button>
-                    </li>
-                    <li class="tag-item">
-                        <button class="btn-tag" type="button">#Desert</button>
-                    </li>
-                    <li class="tag-item">
-                        <button class="btn-tag" type="button">#Sweet</button>
-                    </li>
-                </ul>
+                <ul class="tags-1"></ul>
                 <div class="rating-wrap-recipe">
                     <!-- <div class="rating-recipe" id="rating-container"> -->
                     <span class="rating-number-recipe">4.5</span>
@@ -108,37 +110,33 @@
                     <span class="cooking-time">40 min</span>
                 </div>
             </div>
-            <ul class="ingredients">
-                <li class="ingredient-item">
-                    Banana<span class="ingredient-amount">1 large</span>
-                </li>
-                <li class="ingredient-item">
-                    Eggs<span class="ingredient-amount">1 large</span>
-                </li>
-                <li class="ingredient-item">
-                    Oil<span class="ingredient-amount">1 large</span>
-                </li>
-                <li class="ingredient-item">
-                    Pecan nuts<span class="ingredient-amount">1 large</span>
-                </li>
-                <li class="ingredient-item">
-                    Baking Powder<span class="ingredient-amount">1 large</span>
-                </li>
-                <li class="ingredient-item">
-                    Raspberries<span class="ingredient-amount">1 large</span>
-                </li>
-            </ul>
-            <ul class="tags-2 tags">
-                <li class="tag-item">
-                    <button class="btn-tag" type="button">#Breakfast</button>
-                </li>
-                <li class="tag-item">
-                    <button class="btn-tag" type="button">#Breakfast</button>
-                </li>
-                <li class="tag-item">
-                    <button class="btn-tag" type="button">#Breakfast</button>
-                </li>
-            </ul>
+            <div class="ingredients-wrap">
+                <ul class="ingredients">
+                    <li class="ingredient-item">
+                        Banana<span class="ingredient-amount">1 large</span>
+                    </li>
+                    <li class="ingredient-item">
+                        Eggs<span class="ingredient-amount">1 large</span>
+                    </li>
+                    <li class="ingredient-item">
+                        Oil<span class="ingredient-amount">1 large</span>
+                    </li>
+                    <li class="ingredient-item">
+                        Pecan nuts<span class="ingredient-amount">1 large</span>
+                    </li>
+                    <li class="ingredient-item">
+                        Baking Powder<span class="ingredient-amount"
+                            >1 large</span
+                        >
+                    </li>
+                    <li class="ingredient-item">
+                        Raspberries<span class="ingredient-amount"
+                            >1 large</span
+                        >
+                    </li>
+                </ul>
+            </div>
+            <ul class="tags-2"></ul>
             <div class="instruction-wrap">
                 <p class="recipe-instruction">
                     Mash the ripe banana in a medium mixing bowl. Add the egg
