new modal logic

--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,11 @@
         <script type="module" src="./js/header.js" defer></script>
         <script type="module" src="./js/popup.js" defer></script>
         <script type="module" src="./js/popular.js" defer></script>
-        <script type="module" src="./js/testyApiService.js" defer></script>
+        <!-- <script type="module" src="./js/testyApiService.js" defer></script> -->
         <script type="module" src="./js/main-category.js" defer></script>
         <script type="module" src="./js/modal-order-now.js" defer></script>
         <script type="module" src="./js/modal-give-rating.js" defer></script>
-        <script type="module" src="./js/modal-recipe.js" defer></script>
+        <!-- <script type="module" src="./js/my-modal-recipe.js" defer></script> -->
         <script type="module" src="./js/hero-slider.js" defer></script>
     </body>
 </html>
