favorite js fixed

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -58,6 +58,9 @@
                 favorites for easier access in the future.
             </p>
         </section>
+        <include src="./html/modal-order-now.html"></include>
+        <include src="./html/modal-recipe.html"></include>
+        <include src="./html/modal-give-rating.html"></include>
         <script type="module" src="./js/header.js" defer></script>
         <script type="module" src="./favorites.js"></script>
     </body>
